[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "language-tool-python>=3.3.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "speechrecognition>=3.15.1",
    "streamlit>=1.55.0",
    "textstat>=0.7.13",
]
